--- a/modules/contract/CHANGELOG
+++ b/modules/contract/CHANGELOG
@@ -1,3 +1,7 @@
+* Display contract in different colors in tree view according to state.
+* Add contract icon on tree view
+
+Version 1.5 - 2015-09-24
 * Add cache on contract.sub_status
 * Add contract.option.version and move extra_data in contract module
 * Voiding a contract preserves initial_start_date and activation_history
