endorsement_loan : Make sure on_change does not override default values
review http://rietveld.coopengo.com/16440001

--- a/modules/endorsement_loan/locale/fr_FR.po
+++ b/modules/endorsement_loan/locale/fr_FR.po
@@ -67,6 +67,14 @@ msgstr ""
 "Les garanties suivantes n'ont pas de quotités :\n"
 "  %s"
 
+msgctxt "field:loan,previous_frequency:"
+msgid "Previous Frequency"
+msgstr "Fréquence précédente"
+
+msgctxt "field:loan,previous_release_date:"
+msgid "Previous Release Date"
+msgstr "Date de déblocage des fonds précédente"
+
 msgctxt ""
 "field:contract.covered_element.add_option.loan_share_selector,contract:"
 msgid "Contract"
