--- a/modules/contract_term_renewal/locale/fr_FR.po
+++ b/modules/contract_term_renewal/locale/fr_FR.po
@@ -255,3 +255,11 @@ msgctxt ""
 "wizard_button:contract_term_renewal.decline_renewal,select_reason,end:"
 msgid "Cancel"
 msgstr "Annuler"
+
+msgctxt "model:event.type,name:event_renew_contract"
+msgid "Renew Contract"
+msgstr "Renouvellement du contrat"
+
+msgctxt "model:event.type,name:event_decline_contract_renewal"
+msgid "Decline Contract Renewal"
+msgstr "Refus du renouvellement du contrat"
