--- a/modules/rule_engine/CHANGELOG
+++ b/modules/rule_engine/CHANGELOG
@@ -1,3 +1,5 @@
+* Display expected return type to help user
+
 Version 1.4 - 2015-05-29
 * Add calculation date to rule engine log to retrieve more easily the good log
 * Execution logs are no more automatically deleted when the debug mode is removed
