rule_engine: Add missing translations

--- a/modules/rule_engine/locale/fr_FR.po
+++ b/modules/rule_engine/locale/fr_FR.po
@@ -46,9 +46,7 @@ msgid ""
 "Error info :\n"
 "%s"
 msgstr ""
-"Une erreur s'est produite lors de l'exécution de la règle %s. Pour "
-"davantage d'informations, veuillez activer le mode debug de la règle et "
-"consulter les logs.\n"
+"Une erreur s'est produite lors de l'exécution de la règle %s. Pour davantage d'informations, veuillez activer le mode debug de la règle et consulter les logs.\n"
 "\n"
 "Informations sur l'erreur :\n"
 "%s"
@@ -182,6 +180,10 @@ msgstr "Cas de tests OK"
 msgctxt "field:rule_engine,rec_name:"
 msgid "Name"
 msgstr "Nom"
+
+msgctxt "field:rule_engine,result_type:"
+msgid "Result Type"
+msgstr "Type du résultat"
 
 msgctxt "field:rule_engine,rules_used:"
 msgid "Rules"
@@ -970,6 +972,26 @@ msgstr "Règle"
 msgctxt "selection:rule_engine,extra_data_kind:"
 msgid "Table"
 msgstr "Table"
+
+msgctxt "selection:rule_engine,result_type:"
+msgid ""
+msgstr " "
+
+msgctxt "selection:rule_engine,result_type:"
+msgid "Boolean"
+msgstr "Booléen"
+
+msgctxt "selection:rule_engine,result_type:"
+msgid "Date"
+msgstr "Date"
+
+msgctxt "selection:rule_engine,result_type:"
+msgid "List"
+msgstr "Liste"
+
+msgctxt "selection:rule_engine,result_type:"
+msgid "Numeric"
+msgstr "Numérique"
 
 msgctxt "selection:rule_engine,status:"
 msgid "Draft"
