--- a/modules/contract_insurance_invoice/CHANGELOG
+++ b/modules/contract_insurance_invoice/CHANGELOG
@@ -1,3 +1,4 @@
+* Add set_number batch to let invoice.post be out scalable
 * Allow other uses for remainder when reconciling
 * Allow to configure premium with tax included
 
