--- a/modules/coog_core/doc/en/CHANGELOG
+++ b/modules/coog_core/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#9861 Set admin's company during batch execution
 * FEA#9698 Add retry argument to batches
 * FEA#9764 Improve batches performances by using root as batch user
 * BUG#9703 FIx APIs inconsistencies
