--- a/modules/coog_core/doc/fr/CHANGELOG
+++ b/modules/coog_core/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#9861 Utilisation de la société de l'administrateur lors de l'exécution des batchs
 * FEA#9698 Ajout de l'argument retry au batches
 * FEA#9764 Améliorer les performances des batchs en les exécutant avec l'utilisateur root
 * BUG#9703 Correction des inconsistences d'API
