--- a/modules/contract_surrender/doc/fr/CHANGELOG
+++ b/modules/contract_surrender/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#9844 Réactivation des contrats uniquement si nécessaire suite à annulation de rachat
 * BUG#9791 Planification plutôt qu'exécution des rachats automatiques
 * BUG#9302 Correction de la date de recalcul des quittances suite à annulation de rachat
 
