--- a/modules/account_party_balance/doc/fr/CHANGELOG
+++ b/modules/account_party_balance/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#0000 Réutilisation du compte bancaire définit dans le module de gestion du sepa
+
 Version 2.0 - 2018-04-13
 Version 1.14 - 2017-11-09
 * BUG#7308 Correction d'un crash lors de l'ouverture du compte tiers sur un tiers sans aucune opération comptable
